re PR target/20375 (C++ ICE in assign_parm_find_entry_rtl)

PR c++/20375
	* function.c (struct assign_parm_data_one): Remove last_named
	field.
	(assign_parm_find_data_types): Don't determine last_named.
	Reorder named_parm determination.
	(assign_parms): Only setup varargs on the last non-varadic
	parameter.
testsuite:
	PR c++/20375
	* g++.dg/other/stdarg3.C: New.

From-SVN: r96237